# Pramana-Latest

./: .dockerignore  .env.example  .gitignore  DOCKER_QUICKSTART.md  DOCKER_README.md  Dockerfile.service  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.service.yml  output.md
service/: README.md  pyproject.toml  requirements.txt  test_cases.json
service/outputs/: qa_results.json  qa_results.md
service/service/storage/AEL_Earnings_Presentation_Q2-FY26_copy/: text_records.json
service/service/storage/AEL_Press_Release_Q2_FY26_copy/: text_records.json
service/src/powermind_multimodal_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
service/src/powermind_rag/: __init__.py  __main__.py  cli.py  config.py  device.py  document.py  embeddings.py  faiss_store.py  llm.py  mcp_server.py  ocr.py  pipeline.py  rate_limit.py  relevance.py  rrf.py  schema.py  text_index.py  verifier.py  visual_index.py  visual_understanding.py
service/src/powermind_rag/__pycache__/: __init__.cpython-310.pyc.1996677225968  __init__.cpython-311.pyc.2657443371520  __init__.cpython-311.pyc.2866692951472  __init__.cpython-313.pyc.2857444440112  __main__.cpython-311.pyc.2657443371520  __main__.cpython-313.pyc.2857444440112  cli.cpython-310.pyc.1996677225968  cli.cpython-311.pyc.2615737671376  cli.cpython-311.pyc.2657443371520  cli.cpython-313.pyc.2857444440112  config.cpython-310.pyc.1996677225968  config.cpython-311.pyc.1647159140720  config.cpython-311.pyc.2657443371520  config.cpython-311.pyc.2754087670448  config.cpython-311.pyc.2866698637744  (+56 more)
service/storage/AELBoardoutcome041120251_copy/: visual_page_analysis.json  visual_records.json
service/storage/AEL_Earnings_Presentation_Q2-FY26_copy/: text_records.json  visual_page_analysis.json  visual_page_failures.json  visual_records.json
service/storage/AEL_Press_Release_Q2_FY26_copy/: text_records.json  visual_page_analysis.json  visual_records.json
service/storage_ingest_smoke/AEL_Press_Release_Q2_FY26_copy/: text_records.json  visual_records.json
service/tests/: test_device.py  test_pipeline_vlm_fallback.py  test_relevance.py  test_rrf.py  test_verifier.py
service/tests/__pycache__/: test_device.cpython-310.pyc.1996677135696  test_device.cpython-313.pyc.2857438097552  test_relevance.cpython-313.pyc.2857444440112  test_rrf.cpython-310.pyc.1996677135696  test_rrf.cpython-313.pyc.2857438097552  test_verifier.cpython-310.pyc.1996677135696  test_verifier.cpython-313.pyc.2857438097552
(+55 files in other folders)
