[project]
name = "pramana-rag"
version = "1.0.0"
description = "Pramana: production-grade API-first multimodal RAG with NVIDIA embeddings, Mistral OCR, Gemini/NVIDIA VLM, hybrid retrieval, RRF, and CRAG."
requires-python = ">=3.10"
dependencies = [
  "faiss-cpu>=1.8.0",
  "groq>=0.9.0",
  "google-generativeai>=0.8.5",
  "mistralai>=1.0.0",
  "numpy>=1.26.0",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.1",
  "rank-bm25>=0.2.2",
  "fastmcp>=3.0.0,<4",
]

[project.scripts]
pramana-rag = "powermind_rag.cli:main"
powermind-rag = "powermind_rag.cli:main"
pramana-mcp = "powermind_rag.mcp_server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
